# wsjtx-mac

./: COMPILE.macos  check_appbundle.sh
Transceiver/: TCITransceiver.cpp
bundle_fixup/: CMakeLists.txt
